# torrents-importer-sample

./: .gitignore  Cargo.toml  README.md  project-words.txt
.github/workflows/: testing.yaml
data/: database.xml  database.xsd
src/: action.rs  app.rs  config.rs  main.rs  statistics.rs  ui.rs  utils.rs
src/source/: mod.rs
src/source/xml/: structs.rs
