[package]
name = "torrents-importer-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.30"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1.0"
tokio = { version = "1.30", features = ["full"] }
serde_derive = "1.0"
serde-xml-rs = "0.4"
serde_json = "1.0.64"
thiserror = "1.0.47"
colored = "2.0.4"
